Fix post button spacing on mobile

--- a/_sass/arco.scss
+++ b/_sass/arco.scss
@@ -128,6 +128,7 @@ li, ul {
 
 .MathJax_Display {
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .content {
