--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -15,5 +15,5 @@ $table-background-colour: #e5e5e5;
 // Sizes
 
 $sidebar-width: 330px;
-$sidebar-height-min: 100px;
-$sidebar-height: 150px;
+$sidebar-height-min: 120px;
+$sidebar-height: 170px;
