--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -2,10 +2,6 @@
     width: 100%;
 }
 
-.post-buttons {
-    margin: 3em 0;
-}
-
 .post-title h1 {
     margin: 0;
 }
