--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -115,6 +115,10 @@
         animation-duration: .35s;
         animation-timing-function: ease;
     }
+
+    .post-buttons {
+        margin: 3em 0;
+    }
 }
 
 @media only screen and (orientation: portrait) and (max-width: 450px) {
@@ -183,6 +187,15 @@
         animation-duration: .35s;
         animation-timing-function: ease;
     }
+
+    .post-buttons {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        a {
+            margin: .5em;
+        }
+    }
 }
 
 @media only screen and (orientation: landscape) {
@@ -242,6 +255,10 @@
         opacity: 1;
         animation-duration: .35s;
         animation-timing-function: ease;
+    }
+
+    .post-buttons {
+        margin: 3em 0;
     }
 }
 
